# embedded

./: .gitignore  .gitmodules  API.md  README.md  platformio.ini
.githooks/: pre-commit
.github/workflows/: ci.yml
controlunit/: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Makefile  README.md
controlunit/components/: README.md
controlunit/components/connection_data/: CMakeLists.txt  connection_data_types.cpp  connection_data_types.h
controlunit/components/control_unit_manager/: CMakeLists.txt  ControlUnitManager.cpp  ControlUnitManager.h
controlunit/components/json_parser/: CMakeLists.txt  JsonParser.cpp  JsonParser.h
controlunit/components/mock_data/: CMakeLists.txt  MockDataGenerator.cpp  MockDataGenerator.h
controlunit/components/net_utils/: CMakeLists.txt  wifi_config_example.h  wifi_manager.cpp  wifi_manager.h
controlunit/components/readings_dispatcher/: CMakeLists.txt  ReadingsDispatcher.cpp  ReadingsDispatcher.h
controlunit/components/rest_client/: CMakeLists.txt  RestClient.cpp  RestClient.h
controlunit/components/rest_server/: CMakeLists.txt  README.md  RestServer.cpp  RestServer.h  rest_server.cpp  rest_server.h
controlunit/components/rest_server/handlers/: BaseHandler.cpp  BaseHandler.h  ConnectHandler.cpp  ConnectHandler.h  GetHandler.cpp  GetHandler.h  HelloHandler.cpp  HelloHandler.h  PostHandler.cpp  PostHandler.h  PostexampleHandler.cpp  PostexampleHandler.h  ReadingsHandler.cpp  ReadingsHandler.h  TimeHandler.cpp  TimeHandler.h  hello_handler.cpp  hello_handler.h  postexample_handler.cpp  postexample_handler.h  status_handler.cpp  status_handler.h
controlunit/components/rest_server/handlers/test/: test_hello_handler.cpp
controlunit/components/sensor_data/: CMakeLists.txt  sensor_data_types.cpp  sensor_data_types.h
controlunit/components/sensor_unit_link_syncer/: CMakeLists.txt  SensorUnitLinkSyncer.cpp  SensorUnitLinkSyncer.h
controlunit/components/sensor_unit_manager/: CMakeLists.txt  SensorUnitManager.cpp  SensorUnitManager.h
controlunit/components/time_sync_manager/: CMakeLists.txt  TimeSyncManager.cpp  TimeSyncManager.h
controlunit/helpers/: README.md  cu_cppcheck.sh  filter_compile_commands.py  merge_compile_commands.py  mergerunner.sh
controlunit/helpers/jwtgenerator/: Makefile  README.md  go.mod  jwt_generator.go
controlunit/helpers/testserver/: README.md  caserver.go  go.mod
controlunit/main/: CMakeLists.txt  main.cpp
controlunit/main/include/: wifi_config_example.h
controlunit/test_runner/: CMakeLists.txt  README.md  sdkconfig.defaults
controlunit/test_runner/main/: CMakeLists.txt  main.cpp
include/controlunit/: README
include/sensorunit/: README
sensorunit/: .clang-tidy  .gitignore  Makefile  README.md  platformio.ini
sensorunit/helpers/: README.md  compiledb.py  su_cppcheck.sh
sensorunit/helpers/testserver/: README.md  go.mod  server_su.go
sensorunit/include/: JsonParser.h  README  communication_data_types.h  config_example.h  constants.h  sensor_data_types.h
sensorunit/lib/: README  README.md
sensorunit/lib/connection_manager/: ConnectionManager.cpp  ConnectionManager.h  library.json
sensorunit/lib/logging/: library.json  (+2 more)
sensorunit/src/: README  main.cpp
src/controlunit/: main.cpp
src/sensorunit/: README
(+33 files in other folders)
